fix(assets): prevent featured title from overlapping

--- a/assets/scss/blocks/_section.scss
+++ b/assets/scss/blocks/_section.scss
@@ -12,11 +12,9 @@
     width: 100%;
     position: absolute;
     text-align: center;
+    transform: translateY(-100%) rotate(-5deg);
 
     :is(h1, h2, h3, h4, h5) {
-      position: relative;
-      transform: translateY(-100%) rotate(-5deg);
-
       @include apply-utility("text", "900");
     }
 
